@@ -1,17 +1,79 @@
-# CONFIGURE for net-tools
+# Setting all options default to 'y' so the default can be used
+# on any system.
+# Should use the optional_depends check in DEPENDS for gettext
+config_query  GETTEXT    "Does your system support GNU gettext?"      y
+config_query  UNIX       "UNIX protocol family?"                      y
+config_query  INET       "INET (TCP/IP) protocol familiy?"            y
+config_query  INET6      "INET6 (IPv6) protocol family?"              y
+config_query  NOVELL     "Novell IPX/SPX protocol family?"            y
+config_query  APPLETALK  "Appletalk DDP protocol family?"             y
+config_query  AFAX25     "AX25 (packet radio) protocol family?"       y
+config_query  AFNETROM   "NET/ROM (packet radio) protocol family?"    y
+config_query  AFROSE     "Rose (packet radio) protocol family?"       y
+config_query  AFX25      "X.25 (CCITT) protocol family?"              y
+config_query  AFECONET   "Econet protocol family?"                    y
+# Disable DECNET as it's broken...
+config_query  DECNET     "DECnet protocol family?"                    n
+config_query  AFASH      "Ash protocol family?"                       y
+config_query  ETHERNET   "Ethernet (generic) hardware support?"       y
+config_query  ARCNET     "ARCnet hardware support?"                   y
+config_query  SLIP       "SLIP (serial line) hardware support?"       y
+config_query  PPP        "PPP (serial line) hardware support?"        y
+config_query  IPIP       "IPIP Tunnel hardware support?"              y
+config_query  STRIP      "STRIP (Metricom radio) hardware support?"   y
+config_query  TOKEN      "Token ring (generic) hardware support?"     y
+config_query  HWAX25     "AX25 (packet radio) hardware support?"      y
+config_query  HWROSE     "Rose (packet radio) hardware support?"      y
+config_query  HWNETROM   "NET/ROM (packet radio) hardware support?"   y
+config_query  HWX25      "X.25 (generic) hardware support?"           y
+config_query  FRAME      "DLCI/FRAD (frame relay) hardware support?"  y
+config_query  SIT        "SIT (IPv6-in-IPv4) hardware support?"       y
+config_query  FDDI       "FDDI (generic) hardware support?"           y
+config_query  HIPPI      "HIPPI (generic) hardware support?"          y
+config_query  HWASH      "Ash hardware support?"                      y
+config_query  CISCO      "(Cisco)-HDLC/LAPB hardware support?"        y
+config_query  IRDA       "IrDA hardware support?"                     y
+config_query  HWECONET   "Econet hardware support?"                   y
+config_query  IPMASQ     "IP Masquerading support?"                   y
+config_query  IPTOOLS    "Build iptunnel and ipmaddr?"                y
+# Turn off MII by default as it fails to build on some machines
+config_query  MII        "Build mii-tool?"                            n
 
-pushd $SCRIPT_DIRECTORY > /dev/null
-DO_CONFIG=yes
-if  [  -f  $CONFIG_CACHE/net-tools.config.h  -a  \
-      -f  $CONFIG_CACHE/net-tools.config.make  ]  ;  then
-  query  "Reconfigure net-tools?"  n  ||  DO_CONFIG=no
-fi
+persistent_add  CONFIG_OPTS
 
-if  [  "$DO_CONFIG" = "yes"  ]  ;  then
-  ./configure.sh  config.in
-  cp  config.h     $CONFIG_CACHE/net-tools.config.h
-  cp  config.make  $CONFIG_CACHE/net-tools.config.make
-  rm  -f  config.h  config.make  config.log  config.status
-fi
-popd > /dev/null
+CONFIG_OPTS="$GETTEXT\n\
+$UNIX\n\
+$INET\n\
+$INET6\n\
+$NOVELL\n\
+$APPLETALK\n\
+$AFAX25\n\
+$AFNETROM\n\
+$AFROSE\n\
+$AFX25\n\
+$AFECONET\n\
+$DECNET\n\
+$AFASH\n\
+$ETHERNET\n\
+$ARCNET\n\
+$SLIP\n\
+$PPP\n\
+$IPIP\n\
+$STRIP\n\
+$TOKEN\n\
+$HWAX25\n\
+$HWROSE\n\
+$HWNETROM\n\
+$HWX25\n\
+$FRAME\n\
+$SIT\n\
+$FDDI\n\
+$HIPPI\n\
+$HWASH\n\
+$CISCO\n\
+$IRDA\n\
+$HWECONET\n\
+$IPMASQ\n\
+$IPTOOLS\n\
+$MII\n"
 
