@@ -1,0 +1,4 @@
+make  BASEDIR=${INSTALL_ROOT}/  install                          &&
+install  -m 755  $SCRIPT_DIRECTORY/ifup    ${INSTALL_ROOT}/sbin  &&
+install  -m 755  $SCRIPT_DIRECTORY/ifdown  ${INSTALL_ROOT}/sbin
+
