@@ -1,91 +1,0 @@
-#
-# config.in	Configure.sh source for the net-tools.
-#		This file contains the definition of what the support
-#		library contains.  Most of all, it defines which types
-#		of address families and hardware we know of.
-#
-# NET-TOOLS	A collection of programs that form the base set of the
-#		NET-3 Networking Distribution for the LINUX operating
-#		system.
-#
-# Version:	config.in 1.22	(99-04-19)
-#
-# Author:	Fred N. van Kempen, <waltje@uwalt.nl.mugnet.org>
-#		Copyright 1988-1993 MicroWalt Corporation
-#
-#		Bernd 'eckes' Eckenfels <net-tools@lina.inka.de>
-#		Arnaldo Carvalho de Melo <acme@conectiva.com.br>
-#		  GNU gettext - I18N
-#
-#		This program is free software; you can redistribute it
-#		and/or  modify it under  the terms of  the GNU General
-#		Public  License as  published  by  the  Free  Software
-#		Foundation;  either  version 2 of the License, or  (at
-#		your option) any later version.
-#
-= /*
-=  * config.h	Automatically generated configuration includefile
-=  *
-=  * NET-TOOLS	A collection of programs that form the base set of the
-=  *		NET-3 Networking Distribution for the LINUX operating
-=  *		system.
-=  *
-=  *		DO  NOT  EDIT  DIRECTLY
-=  *
-=  */
-*
-*
-*              Internationalization
-*
-* The net-tools package has currently been translated to French,
-* German and Brazilian Portugese.  Other translations are, of
-* course, welcome.  Answer `n' here if you have no support for
-* internationalization on your system.
-*
-bool 'Does your system support GNU gettext?' I18N n
-*
-*
-*             Protocol Families.
-* 
-bool 'UNIX protocol family' HAVE_AFUNIX y
-bool 'INET (TCP/IP) protocol family' HAVE_AFINET y
-bool 'INET6 (IPv6) protocol family' HAVE_AFINET6 n
-bool 'Novell IPX/SPX protocol family' HAVE_AFIPX y
-bool 'Appletalk DDP protocol family' HAVE_AFATALK y
-bool 'AX25 (packet radio) protocol family' HAVE_AFAX25 y
-bool 'NET/ROM (packet radio) protocol family' HAVE_AFNETROM y
-bool 'Rose (packet radio) protocol family' HAVE_AFROSE n
-bool 'X.25 (CCITT) protocol family' HAVE_AFX25 y
-bool 'Econet protocol family' HAVE_AFECONET n
-bool 'DECnet protocol family' HAVE_AFDECnet n
-bool 'Ash protocol family' HAVE_AFASH n
-*
-*
-*            Device Hardware types.
-*
-bool 'Ethernet (generic) support' HAVE_HWETHER y
-bool 'ARCnet support' HAVE_HWARC y
-bool 'SLIP (serial line) support' HAVE_HWSLIP y
-bool 'PPP (serial line) support' HAVE_HWPPP y
-bool 'IPIP Tunnel support' HAVE_HWTUNNEL y
-bool 'STRIP (Metricom radio) support' HAVE_HWSTRIP y
-bool 'Token ring (generic) support' HAVE_HWTR y
-bool 'AX25 (packet radio) support' HAVE_HWAX25 y
-bool 'Rose (packet radio) support' HAVE_HWROSE n
-bool 'NET/ROM (packet radio) support' HAVE_HWNETROM y
-bool 'X.25 (generic) support' HAVE_HWX25 y
-bool 'DLCI/FRAD (frame relay) support' HAVE_HWFR y
-bool 'SIT (IPv6-in-IPv4) support' HAVE_HWSIT n
-bool 'FDDI (generic) support' HAVE_HWFDDI n
-bool 'HIPPI (generic) support' HAVE_HWHIPPI n
-bool 'Ash hardware support' HAVE_HWASH n
-bool '(Cisco)-HDLC/LAPB support' HAVE_HWHDLCLAPB n
-bool 'IrDA support' HAVE_HWIRDA y
-bool 'Econet hardware support' HAVE_HWEC n
-*
-*
-*           Other Features.
-*
-bool 'IP Masquerading support' HAVE_FW_MASQUERADE n
-bool 'Build iptunnel and ipmaddr' HAVE_IP_TOOLS n
-bool 'Build mii-tool' HAVE_MII n
